# CBCT_FDK_GPU_Recon

./: LICENSE  README.md
ct-reconstruction-gpu-main/: CMakeLists.txt  README.md
ct-reconstruction-gpu-main/base/hdf5/HDF5-2.1.1-win64/: CHANGELOG.md  HDF5_Examples.cmake  hdf5.tag
ct-reconstruction-gpu-main/base/hdf5/HDF5-2.1.1-win64/cmake/: hdf5-config-version.cmake  hdf5-config.cmake  hdf5-targets-relwithdebinfo.cmake  hdf5-targets.cmake  hdf5_java-targets-relwithdebinfo.cmake  hdf5_java-targets.cmake  hdf5_static-targets-relwithdebinfo.cmake  hdf5_static-targets.cmake  libaec-targets.cmake  zlib-targets.cmake
ct-reconstruction-gpu-main/base/hdf5/HDF5-2.1.1-win64/html/: _a_p_i_versions_8dox.html  _a_p_p_d_b_g.html  _a_r__u_g.html  _about.html  _about_8dox.html  _accessibility.html  _accessibility_8dox.html  _app_dbgging_8dox.html  _attributes.html  _attributes_8dox.html  _b_r_a_n_c_h_e_x_p_l.html  _c_b__maven_artifacts.html  _c_make_vols.html  _c_o_d_e_c_o_n_v.html  _collective_calls_8dox.html  _command_tools.html  (+964 more)
ct-reconstruction-gpu-main/include/: reconstruction.hpp
ct-reconstruction-gpu-main/kernels/: backprojection_local.cl  cone_weight.cl
ct-reconstruction-gpu-main/src/: cpu_reconstruction.cpp  fdk_filter.cpp  gpu_reconstruction_buffer.cpp  gpu_reconstruction_buffer_full.cpp  gpu_reconstruction_image.cpp  gpu_reconstruction_local.cpp  main.cpp  mse.cpp
ct-reconstruction-gpu-main/synthetic_data_creator/: createCTProjectionHDF5.m  generate_synthetic.m
ct-reconstruction-gpu-main/viz/: pack_hdf5.py  plot.py  validate_and_plot.py  volumes_meta.txt
(+103 files in other folders)
